Fix for high contrast

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -427,6 +427,7 @@ body .excalidraw {
   --icon-color-hover: var(--tx2);
   --icon-color: var(--tx2);
   --icon-hex: var(--mono0);
+  --interactive-normal: var(--ui1);
   --interactive-accent-hover: var(--ax1);
   --interactive-accent: var(--ax3);
   --interactive-hover: var(--ui1);
@@ -442,6 +443,7 @@ body .excalidraw {
   --nav-indentation-guide-color: var(--ui1);
   --prompt-border-color: var(--ui3);
   --quote-opening-modifier: var(--ui2);
+  --raised-background: var(--ui1);
   --ribbon-background: var(--bg2);
   --scrollbar-active-thumb-bg: var(--ui3);
   --scrollbar-bg: transparent;
