--- a/src/scss/variables/theme.scss
+++ b/src/scss/variables/theme.scss
@@ -48,6 +48,7 @@
 	--icon-color:                        var(--tx2);
 	--icon-hex:                          var(--mono0);
 
+	--interactive-normal:                var(--ui1);
 	--interactive-accent-hover:          var(--ax1);
 	--interactive-accent:                var(--ax3);
 	--interactive-hover:                 var(--ui1);
@@ -68,6 +69,7 @@
 	--prompt-border-color:               var(--ui3);
 	--quote-opening-modifier:            var(--ui2);
 
+	--raised-background:                 var(--ui1);
 	--ribbon-background:                 var(--bg2);
 
 	--scrollbar-active-thumb-bg:         var(--ui3);
